# binance_rs_test

./: Cargo.toml  config.yml  readme.md
configurations/: Cargo.toml
configurations/src/: lib.rs
src/: main.rs
