[package]
name = "binance_rs_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-interval = "0.1.4"
binance = { git = "https://github.com/wisespace-io/binance-rs.git", version = "0.21.0" }
configurations = { version = "0.1.0", path = "configurations" }
rust_decimal = { version = "1.35.0", features = ["serde-with-float"] }
tokio = { version = "1.37.0", features = ["full", "time"] }
